[package]
name = "forbidden-ap"
version = "0.0.0"
authors = ["Vitaly Domnikov <oss@vitaly.codes>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = ["std", "esp-idf-svc/native"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.50.1", default-features = false }
urlencoding = "2.1.3"
heapless = "0.8.0"

[build-dependencies]
embuild = "0.33.0"
